--- a/src/docs/db.yaml
+++ b/src/docs/db.yaml
@@ -7,6 +7,9 @@ info:
 servers:
   - url: http://localhost:3000
     description: Servidor local
+    
+security:
+  - bearerAuth: []
 
 tags:
   - name: Usuarios
@@ -592,6 +595,96 @@ paths:
       responses:
         200:
           description: Elemento eliminado
+  
+  /DB/auth/register:
+    post:
+      tags:
+        - Autenticación
+      summary: Registro de nuevo usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - nombre
+                - correo
+                - contraseña
+              properties:
+                nombre:
+                  type: string
+                correo:
+                  type: string
+                contraseña:
+                  type: string
+                telefono:
+                  type: string
+                direccion:
+                  type: string
+                rol:
+                  type: string
+      responses:
+        '201':
+          description: Usuario registrado exitosamente
+        '400':
+          description: El correo ya está registrado
+        '500':
+          description: Error del servidor
+  
+
+  /DB/auth/login:
+    post:
+      tags:
+        - Autenticación
+      summary: Iniciar sesión y obtener token JWT
+      description: Retorna un token JWT si las credenciales son correctas.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - correo
+                - contraseña
+              properties:
+                correo:
+                  type: string
+                  example: ejemplo@correo.com
+                contraseña:
+                  type: string
+                  example: 123456
+      responses:
+        '200':
+          description: Inicio de sesión exitoso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    description: Token JWT para autenticación
+                  usuario:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      nombre:
+                        type: string
+                      correo:
+                        type: string
+                      rol:
+                        type: string
+        '401':
+          description: Credenciales incorrectas
+        '403':
+          description: Usuario inactivo
+        '500':
+          description: Error interno del servidor
+
+
 
 components:
   schemas:
